# nhk2023-team-a-simulator

./: .gitignore  README.md  flake.nix  meson.build
nix/godot-ros/: devshells.nix  packages.nix
project/: fence.tscn  icon.svg.import  kakuzai.tscn  kakuzai_zenkoku.tscn  ld06.tscn  line.tscn  main.tscn  project.godot  robosim.gdextension  robot.gd  rope_fence.tscn  rope_pole.tscn  yellow_line.tscn
project/addons/kenney_prototype_textures/green/: texture_01.png.import  texture_06.png.import  texture_13.png.import
project/addons/kenney_prototype_textures/light/: texture_01.png.import  texture_02.png.import  texture_06.png.import
project/addons/kenney_prototype_textures/orange/: texture_01.png.import  texture_02.png.import  texture_03.png.import  texture_04.png.import  texture_05.png.import  texture_06.png.import  texture_07.png.import  texture_08.png.import  texture_09.png.import  texture_10.png.import  texture_11.png.import  texture_12.png.import  texture_13.png.import
src/: control_interface.cpp  control_interface.hpp  lidarsim.cpp  lidarsim.hpp  register_types.cpp  register_types.h  ros_bridge.cpp  ros_bridge.hpp  utils.hpp
